--- a/portfolio.html
+++ b/portfolio.html
@@ -103,6 +103,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-uiux">UI/UX Design</li>
             <li data-filter=".filter-casestudy">Case Study</li>
+            <li data-filter=".filter-Cy">Cy</li>
 <!--            
             <li data-filter=".filter-operations">Operations</li>
             <li data-filter=".filter-technology">Technology</li> 
@@ -154,9 +155,9 @@
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-casestudy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/Team_Nexus.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/aaaa.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/Team_Nexus.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="assets/img/portfolio/aaaa.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="https://drive.google.com/file/d/1Mflavn-1ICCXQowq4iVU8G4LyRYqUot3/view?usp=sharing" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
@@ -171,7 +172,7 @@
               </div>
             </div>
 
-<!-- 
+
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
               <div class="portfolio-card">
                 <div class="portfolio-img">
@@ -212,7 +213,7 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Cy">
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-6.webp" alt="Portfolio Item" class="img-fluid">
@@ -232,7 +233,7 @@
               </div>
             </div>
           </div>
--->          
+        
           <!-- End Portfolio Items Container -->
 
         </div>
