--- a/about.html
+++ b/about.html
@@ -37,10 +37,10 @@
 
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="#"><i class="bi bi-twitter-x"></i></a>
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <!-- Mobile Menu Button (hamburger) -->
@@ -87,7 +87,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>A junior web developer and UI/UX enthusiast, passionate about building responsive and user-friendly web applications. Skilled in creating digital experiences that combine functionality with aesthetic design.</p>
+        <p>A junior data analyst and visualization enthusiast, passionate about making data understandable for everyone. Skilled in turning raw data into clear insights using modern analytical and visualization tools</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -97,12 +97,12 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="headline">Hi, I'm Mushtasin Mostak Sifat <br> A calm-minded creative developer crafting serene digital journeys</h2>
+              <h2 class="headline">Hi, I'm Jubaer Abdullah  <br> a statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</h2>
               <p class="lead">
-                Currently pursuing a BSc in Physics at Shahjalal University of Science and Technology, developing strong analytical thinking and problem-solving abilities to enhance software development projects.
+                an undergraduate student in Statistics at Shahjalal University of Science and Technology (SUST), currently in my 3rd year (1st semester).
               </p>
               <p>
-                 Specializing in React.js, Python, and mobile-first UI/UX design, with an emphasis on building efficient, user-centered applications that are both visually appealing and practical.
+                 With a strong foundation in statistical methods and analytical thinking, I’ve worked with a wide range of datasets where I performed data cleaning, data analysis, data visualization, and database management.
               </p>
 
               <div class="cta-group">
@@ -118,7 +118,7 @@
 
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="250">
             <figure class="profile-figure text-center text-lg-end">
-              <img src="assets/img/profile/index_image.jpeg" alt="Portrait of Sifat" class="img-fluid profile-photo">
+              <img src="assets/img/profile/mypic.jpg" alt="Portrait of Sifat" class="img-fluid profile-photo">
             </figure>
           </div>
         </div>
@@ -129,30 +129,30 @@
           <div class="row g-4">
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="120">
               <div class="skill-item">
-                <i class="bi bi-layout-text-window"></i>
-                <h3>UI/UX</h3>
-                <p>Creating user-friendly and engaging interfaces.</p>
+                <i class="bi bi-bar-chart-fill"></i>
+                <h3>Data Analysis & Reporting</h3>
+                <p>Turn raw data into clear, actionable information. Using advanced tools and methods, we analyze datasets and present conclusions with clarity and confidence.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="180">
               <div class="skill-item">
-                <i class="bi bi-code-slash"></i>
-                <h3>React.js</h3>
-                <p>Building responsive and dynamic web apps.</p>
+                <i class="bi bi-graph-up"></i>
+                <h3>Infographic & Social Media Design</h3>
+                <p>Visualize your message with data .I create clean, engaging templates for social media using your data — ideal for public awareness, marketing, and storytelling.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="240">
               <div class="skill-item">
-                <i class="bi bi-phone"></i>
-                <h3>Mobile-first</h3>
-                <p>Optimized experiences for all devices.</p>
+                <i class="bi bi-database"></i>
+                <h3>Data Research & Insights</h3>
+                <p>Discover trends that matter.I  dive deep into complex data, research emerging topics, and uncover meaningful insights to guide decision-making or create compelling narratives.</p>
               </div>
             </div>
             <div class="col-6 col-md-4 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <div class="skill-item">
                 <i class="bi bi-camera"></i>
-                <h3>Python</h3>
-                <p>Backend development and automation solutions.</p>
+                <h3>Programing Language </h3>
+                <p>SPSS,STATA,SQL </p>
               </div>
             </div>
           </div>
@@ -174,24 +174,24 @@
               <article class="timeline-item">
                 <span class="dot"></span>
                 <time>2024</time>
-                <h4>Joined MNO AI LABS</h4>
-                <p>Built websites,and UI prototypes.</p>
+                <h4>Joined SUST Data Science Club</h4>
+                <p>Gained practical experience in Excel, statistical analysis, and data storytelling while contributing to real-world data challenges and knowledge-sharing sessions.</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="240">
               <article class="timeline-item">
                 <span class="dot"></span>
                 <time>2025</time>
-                <h4>Joined TransformsAI</h4>
-                <p>QA Tester, ensuring quality, workflows,<br> and improving software reliability.</p>
+                <h4>Joined Pathao</h4>
+                <p>Associate Maping<br> Operations.</p>
               </article>
             </div>
             <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
               <article class="timeline-item">
                 <span class="dot"></span>
                 <time>2025</time>
-                <h4>Lead Frontend</h4>
-                <p>Leading web projects with React.js and UI/UX enhancements.</p>
+                <h4>Lead Research & Analytics</h4>
+                <p>SUST DSC</p>
               </article>
             </div>
           </div>
@@ -200,7 +200,7 @@
 
         <!-- Quote -->
         <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
-          <p>"Building clean and meaningful experiences through thoughtful code and quiet design."</p>
+          <p>"Building clean and meaningful experiences through thoughtful Idea and quiet design."</p>
         </blockquote>
         <!-- End Quote -->
 
@@ -209,25 +209,25 @@
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
             <div class="fact-pill">
               <i class="bi bi-magic"></i>
-              <span>Minimalism</span>
+              <span> Data Visualization - Advanced </span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="160">
             <div class="fact-pill">
-              <i class="bi bi-headphones"></i>
-              <span>Lo-fi Beats</span>
+              <i class="bi bi-bar-chart-fill"></i>
+              <span>Tableau,PowerBI - Advanced</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="200">
             <div class="fact-pill">
-              <i class="bi bi-geo-alt"></i>
-              <span>City Walks</span>
+              <i class="bi bi-database"></i>
+              <span>SQL- Proficient </span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="240">
             <div class="fact-pill">
-              <i class="bi bi-brush"></i>
-              <span>Designing</span>
+              <i class="bi bi-file-earmark-code"></i>
+              <span>SPSS,Stata, Statistical Analysis - Proficient</span>
             </div>
           </div>
         </div>
@@ -480,13 +480,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sifat</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/mushtasinmostak.sifat"><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
