--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="#"><i class="bi bi-twitter-x"></i></a>
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <!-- Mobile Menu Button (hamburger) -->
@@ -103,9 +103,10 @@
                 <a href="contact.html" class="btn btn-outline">Get In Touch</a>
               </div>
               <div class="social-links" data-aos="fade-up" data-aos-delay="600">
-                <a href="#"><i class="bi bi-twitter"></i></a>
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
+                <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+                <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+                <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
               </div>
             </div>
           </div>
