--- a/about.html
+++ b/about.html
@@ -97,7 +97,7 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="headline">Hi, I'm Jubaer Abdullah  <br> a statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</h2>
+              <h2 class="headline">I'm Jubaer Abdullah  <br> a statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</h2>
               <p class="lead">
                 an undergraduate student in Statistics at Shahjalal University of Science and Technology (SUST), currently in my 3rd year (1st semester).
               </p>
@@ -209,25 +209,25 @@
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
             <div class="fact-pill">
               <i class="bi bi-magic"></i>
-              <span> Data Visualization - Advanced </span>
+              <span> Data Visualization </span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="160">
             <div class="fact-pill">
               <i class="bi bi-bar-chart-fill"></i>
-              <span>Tableau,PowerBI - Advanced</span>
+              <span>Data Analysis</span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="200">
             <div class="fact-pill">
               <i class="bi bi-database"></i>
-              <span>SQL- Proficient </span>
+              <span>Database Management </span>
             </div>
           </div>
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="240">
             <div class="fact-pill">
               <i class="bi bi-file-earmark-code"></i>
-              <span>SPSS,Stata, Statistical Analysis - Proficient</span>
+              <span> Statistical Analysis </span>
             </div>
           </div>
         </div>
@@ -243,7 +243,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Skills</h2>
-        <p>Specializing in responsive web apps and intuitive UI/UX design. Experienced with React.js and Python, emphasizing mobile-first, high-quality solutions.</p>
+        <p>skilled in data analysis, visualization, and dashboard development using Python, Excel, Power BI, and Tableau. Experienced in turning complex datasets into clear, actionable insights for decision-making.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -252,8 +252,8 @@
 
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <div class="skill-box">
-              <h3>HTML</h3>
-              <p>Expert in structuring semantic, accessible, and responsive web pages.</p>
+              <h3>Tableau</h3>
+              <p>Expert in structuring semantic, accessible, and responsive dashboards.</p>
               <span class="text-end d-block">90%</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
@@ -263,7 +263,7 @@
 
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="200">
             <div class="skill-box">
-              <h3>CSS</h3>
+              <h3>Power BI</h3>
               <p>Skilled in crafting visually appealing and responsive designs.</p>
               <span class="text-end d-block">90%</span>
               <div class="progress">
@@ -274,9 +274,9 @@
 
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
             <div class="skill-box">
-              <h3>JavaScript</h3>
-              <p>Experienced in building dynamic and interactive web applications.</p>
-              <span class="text-end d-block">80%</span>
+              <h3>Excel</h3>
+              <p>Experienced in building dynamic and interactive reports.</p>
+              <span class="text-end d-block">90%</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
@@ -286,7 +286,7 @@
           <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
             <div class="skill-box">
               <h3>Python</h3>
-              <p>Proficient in backend development, automation, and data handling.</p>
+              <p>Proficient  data handling.</p>
               <span class="text-end d-block">55%</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
