--- a/contact.html
+++ b/contact.html
@@ -43,10 +43,10 @@
 
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="#"><i class="bi bi-twitter-x"></i></a>
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <!-- Mobile Menu Button (hamburger) -->
@@ -120,7 +120,7 @@
                 </div>
                 <div class="content">
                   <h4>Phone Number</h4>
-                  <p>+880 1823****85</p>
+                  <p>+880 1750976938</p>
                 </div>
               </div>
 
@@ -130,8 +130,8 @@
                 </div>
                 <div class="content">
                   <h4>Email Address</h4>
-                  <p>mushtasinmostak74@gmail.com</p>
-                  <p>mnoailabs@gmail.com</p>
+                  <p>jubaersus@gmail.com</p>
+                  <p>jubaer.x@gmail.com</p>
                 </div>
               </div>
             </div>
@@ -187,13 +187,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sifat</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/mushtasinmostak.sifat"><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
