--- a/portfolio.html
+++ b/portfolio.html
@@ -43,10 +43,10 @@
 
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="#"><i class="bi bi-twitter-x"></i></a>
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <!-- Mobile Menu Button (hamburger) -->
@@ -102,7 +102,7 @@
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-uiux">UI/UX Design</li>
-            <li data-filter=".filter-casestudy">Case Study</li>
+            <li data-filter=".filter-GIS">GIS</li>
             <li data-filter=".filter-Cy">Cy</li>
 <!--            
             <li data-filter=".filter-operations">Operations</li>
@@ -132,41 +132,41 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-casestudy">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-GIS">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/AugmentorAI.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/railac.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/AugmentorAI.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://drive.google.com/file/d/131THlUvBMc9Zr46kTLnjzskSvJQj2tH5/view?usp=sharing" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/railac.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%97%E0%A6%A4-%E0%A7%AF-%E0%A6%AC%E0%A6%9B%E0%A6%B0-%E0%A6%AE%E0%A6%A4%E0%A6%B0-%E0%A6%AC%E0%A6%B0%E0%A6%B9%E0%A6%AE%E0%A6%A3%E0%A6%AC%E0%A6%A1%E0%A6%AF-%E0%A6%A5%E0%A6%95-%E0%A6%B8%E0%A6%B2%E0%A6%9F-ugcPost-7386465648366854144-ZS7c?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Augmentor AI</h4>
-                  <p>Case Study Solution & Presentation</p>
+                  <h4>Rail Accident  Analysis</h4>
+                  <p>Case Study </p>
                   <div class="portfolio-tags">
-                    <span>Problem Solving</span>
-                    <span>Presentation Slides</span>
+                    <span>Research</span>
+                    <span>Report</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-casestudy">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-GIS">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/aaaa.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/elec.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/aaaa.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://drive.google.com/file/d/1Mflavn-1ICCXQowq4iVU8G4LyRYqUot3/view?usp=sharing" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/elec.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%AC%E0%A6%B2%E0%A6%A6%E0%A6%B6%E0%A6%B0-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%A4-%E0%A6%9C%E0%A6%A8%E0%A6%97%E0%A6%A8-%E0%A6%AA%E0%A6%B0%E0%A6%A7%E0%A6%A8-%E0%A6%A6%E0%A6%87%E0%A6%9F-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%95-ugcPost-7360381203364909057-3htr?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Cracker Jack 2.0</h4>
+                  <h4>Election Analysis</h4>
                   <p>Analytical Problem Solving</p>
                   <div class="portfolio-tags">
                     <span>Strategic Planning</span>
-                    <span>Professional Presentation</span>
+                    <span>Professional Summary</span>
                   </div>
                 </div>
               </div>
@@ -255,10 +255,10 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Sifat</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/mushtasinmostak.sifat"><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
+      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
