--- a/resume.html
+++ b/resume.html
@@ -86,7 +86,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>Junior web developer and QA enthusiast, blending creativity with technical expertise to deliver responsive, user-friendly, and reliable software solutions</p>
+        <p>A statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -100,16 +100,16 @@
 
               <div class="resume-content">
                 <article class="education-item">
-                  <h4>Bachelor of Science in Physics</h4>
-                  <h5>2024 - Present</h5>
+                  <h4>Bachelor of Science in Statistics</h4>
+                  <h5>2023 - Present</h5>
                   <p class="institution"><em>Shahjalal University of Science and Technology, Sylhet</em></p>
-                  <p>Building a strong foundation in theoretical and applied physics through research, laboratory work, and academic projects, with emphasis on analytical reasoning, data analysis, and problem-solving.</p>
+                  <p>Building a strong foundation in theoretical and applied statistics through research, laboratory work, and academic projects, with emphasis on analytical reasoning, data analysis, and problem-solving.</p>
                 </article>
 
                 <article class="education-item">
                   <h4>Higher Secondary Certificate (HSC)</h4>
-                  <h5>2022 - 2023</h5>
-                  <p class="institution"><em>Mirpur Science College, Dhaka</em></p>
+                  <h5>202o - 2022</h5>
+                  <p class="institution"><em>BAF Shaheen College Dhaka</em></p>
                   <p>Completed the Science Group curriculum with focus on physics, chemistry, mathematics, and biology, developing analytical and problem-solving skills.</p>
                 </article>
               </div>
@@ -121,28 +121,28 @@
 
               <div class="resume-content">
                 <div class="skill-item">
-                  <h4>Frontend Development</h4>
+                  <h4>Data Analysis</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>Backend Development</h4>
+                  <h4>Data Visualization</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>UI/UX Design</h4>
+                  <h4>Infographic report Design</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
                 </div>
 
                 <div class="skill-item">
-                  <h4>Project Management</h4>
+                  <h4>Database Management</h4>
                   <div class="progress">
                     <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
                   </div>
@@ -158,9 +158,9 @@
 
               <div class="resume-content">
                 <article class="experience-item">
-                  <h4>Junior Web Developer</h4>
-                  <h5>2024 - Present</h5>
-                  <p class="company"><em>MNO AI Labs</em></p>
+                  <h4>Junior Executive Member </h4>
+                  <h5> Dec 2024 - Present</h5>
+                  <p class="company"><em>SUST Data Science Club</em></p>
                   <ul>
                     <li>Build and maintain responsive, high-performance web applications with a focus on intuitive and visually engaging UI/UX design</li>
                     <li>Assist in the development and maintenance of responsive web applications using modern front-end and back-end technologies</li>
@@ -170,8 +170,8 @@
                 </article>
 
                 <article class="experience-item">
-                  <h4>QA Tester</h4>
-                  <h5>2025 - Present</h5>
+                  <h4>Associate Map Operations</h4>
+                  <h5>Oct 2025 - Present</h5>
                   <p class="company"><em>TransformsAI</em></p>
                   <ul>
                     <li>Ensure flawless software performance by testing, identifying, and resolving issues while optimizing QA workflows for seamless user experiences</li>
@@ -196,13 +196,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sifat</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href="https://www.facebook.com/mushtasinmostak.sifat"><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
+        <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
