--- a/portfolio.html
+++ b/portfolio.html
@@ -101,9 +101,9 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-uiux">UI/UX Design</li>
+            <li data-filter=".filter-Statistical_Researc_ Mini-Projects">Statistical Research Mini-Projects</li>
             <li data-filter=".filter-GIS">GIS</li>
-            <li data-filter=".filter-Cy">Cy</li>
+            <li data-filter=".filter-Mass_Data_Cleaning-&-Management">Mass Data Cleaning & Management</li>
 <!--            
             <li data-filter=".filter-operations">Operations</li>
             <li data-filter=".filter-technology">Technology</li> 
@@ -173,7 +173,7 @@
             </div>
 
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Statistical_Researc_ Mini-Projects">
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/portfolio-4.webp" alt="Portfolio Item" class="img-fluid">
