--- a/about.html
+++ b/about.html
@@ -38,8 +38,6 @@
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
       <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
-      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
@@ -97,13 +95,10 @@
           <div class="col-lg-7" data-aos="fade-right" data-aos-delay="150">
             <div class="intro-content">
               <span class="eyebrow">Hello there</span>
-              <h2 class="headline">I'm Jubaer Abdullah  <br> a statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</h2>
+              <h2 class="lead">I'm Jubaer, <br> a statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</h2>
               <p class="lead">
-                an undergraduate student in Statistics at Shahjalal University of Science and Technology (SUST), currently in my 3rd year (1st semester).
-              </p>
-              <p>
-                 With a strong foundation in statistical methods and analytical thinking, I’ve worked with a wide range of datasets where I performed data cleaning, data analysis, data visualization, and database management.
-              </p>
+               currently I am  an undergraduate student in Statistics at Shahjalal University of Science and Technology (SUST),  in my 3rd year (1st semester).
+                </p>
 
               <div class="cta-group">
                 <a href="portfolio.html" class="btn-ghost">
@@ -152,58 +147,14 @@
               <div class="skill-item">
                 <i class="bi bi-camera"></i>
                 <h3>Programing Language </h3>
-                <p>SPSS,STATA,SQL </p>
+                <p>Python,SPSS,STATA,SQL </p>
               </div>
             </div>
           </div>
         </div>
         <!-- End Skills Grid -->
 
-        <!-- Journey Timeline -->
-        <div class="mb-5">
-          <div class="row g-4">
-            <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="120">
-              <article class="timeline-item">
-                <span class="dot"></span>
-                <time>2024</time>
-                <h4>Case Study & Research Skills</h4>
-                <p>Developed analytical, research-based problem-solving skills.</p>
-              </article>
-            </div>
-            <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="180">
-              <article class="timeline-item">
-                <span class="dot"></span>
-                <time>2024</time>
-                <h4>Joined SUST Data Science Club</h4>
-                <p>Gained practical experience in Excel, statistical analysis, and data storytelling while contributing to real-world data challenges and knowledge-sharing sessions.</p>
-              </article>
-            </div>
-            <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="240">
-              <article class="timeline-item">
-                <span class="dot"></span>
-                <time>2025</time>
-                <h4>Joined Pathao</h4>
-                <p>Associate Maping<br> Operations.</p>
-              </article>
-            </div>
-            <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="300">
-              <article class="timeline-item">
-                <span class="dot"></span>
-                <time>2025</time>
-                <h4>Lead Research & Analytics</h4>
-                <p>SUST DSC</p>
-              </article>
-            </div>
-          </div>
-        </div>
-        <!-- End Journey Timeline -->
-
-        <!-- Quote -->
-        <blockquote class="personal-quote text-center mb-5" data-aos="fade-down" data-aos-delay="200">
-          <p>"Building clean and meaningful experiences through thoughtful Idea and quiet design."</p>
-        </blockquote>
-        <!-- End Quote -->
-
+        
         <!-- Fun Facts -->
         <div class="row g-3 justify-content-center">
           <div class="col-6 col-md-3 col-lg-2" data-aos="zoom-in" data-aos-delay="120">
@@ -484,8 +435,6 @@
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
-      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
