--- a/portfolio.html
+++ b/portfolio.html
@@ -43,9 +43,6 @@
 
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
-      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
@@ -93,7 +90,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Portfolio</h2>
-        <p>Here’s a glimpse into the work I’m quietly building: simple, intentional, and human-centered web experiences, alongside case study analyses and solution presentations shaped through curiosity and clear design</p>
+        <p>...</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -101,9 +98,13 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-Statistical_Researc_ Mini-Projects">Statistical Research Mini-Projects</li>
+            <li data-filter=".filter-Python">Python</li>
             <li data-filter=".filter-GIS">GIS</li>
-            <li data-filter=".filter-Mass_Data_Cleaning-&-Management">Mass Data Cleaning & Management</li>
+            <li data-filter=".filter-Sql">Sql</li>
+            <li data-filter=".filter-PowerBI">PowerBI</li>
+            <li data-filter=".filter-Tableau">Tableau</li>
+            <li data-filter=".filter-DBMS">DBMS</li>
+            <li data-filter=".filter-Stata-R-SPSS">Stata-R-SPSS</li>
 <!--            
             <li data-filter=".filter-operations">Operations</li>
             <li data-filter=".filter-technology">Technology</li> 
@@ -111,13 +112,13 @@
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-uiux">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Tableau">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/TransformsAI.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/MUSLIM.png" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/TransformsAI.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://transformsai.com/" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/MUSLIM.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://public.tableau.com/app/profile/jubaer.abdullah/viz/MuslimPopulationSpectrum_FromCoreNationstoMinorityCommunities/Dashboard2" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
@@ -252,12 +253,10 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Sifat</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
-      <a href="https://github.com/jubaerabdullah-io"><i class="bi bi-github"></i></a>
       <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
