--- a/resume.html
+++ b/resume.html
@@ -36,10 +36,7 @@
 
     <!-- Social Icons (move left on mobile, right on desktop) -->
     <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="#"><i class="bi bi-twitter-x"></i></a>
-      <a href="#"><i class="bi bi-facebook"></i></a>
-      <a href="#"><i class="bi bi-instagram"></i></a>
-      <a href="#"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
     </div>
 
     <!-- Mobile Menu Button (hamburger) -->
@@ -86,7 +83,6 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Resume</h2>
-        <p>A statistics undergraduate specializing in data analysis and visualization. Dedicated to creating meaningful, accurate, and user-friendly data-driven insights.</p>
       </div><!-- End Section Title -->
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
@@ -103,15 +99,26 @@
                   <h4>Bachelor of Science in Statistics</h4>
                   <h5>2023 - Present</h5>
                   <p class="institution"><em>Shahjalal University of Science and Technology, Sylhet</em></p>
-                  <p>Building a strong foundation in theoretical and applied statistics through research, laboratory work, and academic projects, with emphasis on analytical reasoning, data analysis, and problem-solving.</p>
+                  <p>3rd Year 1st Semester </p>
+                  <p>On-going </p>
                 </article>
 
                 <article class="education-item">
                   <h4>Higher Secondary Certificate (HSC)</h4>
                   <h5>202o - 2022</h5>
                   <p class="institution"><em>BAF Shaheen College Dhaka</em></p>
-                  <p>Completed the Science Group curriculum with focus on physics, chemistry, mathematics, and biology, developing analytical and problem-solving skills.</p>
+                  <p>Science</p>
+                  <p>GPA: 5.00</p>
                 </article>
+
+                <article class="education-item">
+                  <h4>Secondary School Certificate (SSC)</h4>
+                  <h5>2015 - 2020</h5>
+                  <p class="institution"><em>Azim Uddin High School</em></p>
+                  <p>Science</p>
+                  <p>GPA: 5.00</p>
+                </article>
+
               </div>
             </div><!-- End Education Section -->
 
@@ -159,25 +166,29 @@
               <div class="resume-content">
                 <article class="experience-item">
                   <h4>Junior Executive Member </h4>
-                  <h5> Dec 2024 - Present</h5>
+                  <h5> Dec 2024 - Sep 2025</h5>
                   <p class="company"><em>SUST Data Science Club</em></p>
                   <ul>
-                    <li>Build and maintain responsive, high-performance web applications with a focus on intuitive and visually engaging UI/UX design</li>
-                    <li>Assist in the development and maintenance of responsive web applications using modern front-end and back-end technologies</li>
-                    <li>Collaborate with teams to implement features, optimize code, and ensure seamless user experiences</li>
-                    <li>Contribute to project planning, code reviews, and quality assurance for timely, efficient delivery</li>
+                    <li>...</li>
+                  </ul>
+                </article>
+
+                <article class="experience-item">
+                  <h4>Ass. Research & Analytics Associate </h4>
+                  <h5> Sep 2025 - Present</h5>
+                  <p class="company"><em>SUST Data Science Club</em></p>
+                  <ul>
+                    <li>...</li>
                   </ul>
                 </article>
 
                 <article class="experience-item">
                   <h4>Associate Map Operations</h4>
                   <h5>Oct 2025 - Present</h5>
-                  <p class="company"><em>TransformsAI</em></p>
+                  <p class="company"><em>Pathao Ltd.</em></p>
                   <ul>
-                    <li>Ensure flawless software performance by testing, identifying, and resolving issues while optimizing QA workflows for seamless user experiences</li>
-                    <li>Streamline QA processes through automated testing and thorough bug analysis, delivering reliable, high-quality applications</li>
-                    <li>Partner with developers to detect and resolve issues, improve application stability, and maintain exceptional software standards</li>
-                    <li>Validate web and mobile applications to guarantee smooth, intuitive, and error-free user experiences across platforms</li>
+                    <li>....</li>
+                    
                   </ul>
                 </article>
 
@@ -199,10 +210,8 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
         <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
         <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-        <a href="https://public.tableau.com/app/profile/jubaer.abdullah/vizzes"><i class="bi bi-bar-chart-fill"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
