--- a/about.html
+++ b/about.html
@@ -35,11 +35,6 @@
 <header id="header" class="header d-flex align-items-center light-background sticky-top">
   <div class="container d-flex align-items-center justify-content-between position-relative">
 
-    <!-- Social Icons (move left on mobile, right on desktop) -->
-    <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
-    </div>
 
     <!-- Mobile Menu Button (hamburger) -->
     <i class="mobile-nav-toggle d-xl-none bi bi-list order-3 order-xl-1 ms-auto"></i>
@@ -84,7 +79,6 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>About</h2>
         <p>A junior data analyst and visualization enthusiast, passionate about making data understandable for everyone. Skilled in turning raw data into clear insights using modern analytical and visualization tools</p>
       </div><!-- End Section Title -->
 
@@ -239,6 +233,18 @@
               <h3>Python</h3>
               <p>Proficient  data handling.</p>
               <span class="text-end d-block">55%</span>
+              <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-3" data-aos="fade-up" data-aos-delay="400">
+            <div class="skill-box">
+              <h3>SQL</h3>
+              <p>Proficient  in Database Management </p>
+              <span class="text-end d-block">70%</span>
               <div class="progress">
                 <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100">
                 </div>
@@ -434,9 +440,9 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
-      </div>
+      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
+    </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
