--- a/portfolio.html
+++ b/portfolio.html
@@ -41,10 +41,7 @@
 <header id="header" class="header d-flex align-items-center light-background sticky-top">
   <div class="container d-flex align-items-center justify-content-between position-relative">
 
-    <!-- Social Icons (move left on mobile, right on desktop) -->
-    <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
-    </div>
+   
 
     <!-- Mobile Menu Button (hamburger) -->
     <i class="mobile-nav-toggle d-xl-none bi bi-list order-3 order-xl-1 ms-auto"></i>
@@ -87,11 +84,7 @@
     <!-- Portfolio Section -->
     <section id="portfolio" class="portfolio section">
 
-      <!-- Section Title -->
-      <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio</h2>
-        <p>...</p>
-      </div><!-- End Section Title -->
+      
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
@@ -139,7 +132,7 @@
                   <img src="assets/img/portfolio/railac.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/railac.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%97%E0%A6%A4-%E0%A7%AF-%E0%A6%AC%E0%A6%9B%E0%A6%B0-%E0%A6%AE%E0%A6%A4%E0%A6%B0-%E0%A6%AC%E0%A6%B0%E0%A6%B9%E0%A6%AE%E0%A6%A3%E0%A6%AC%E0%A6%A1%E0%A6%AF-%E0%A6%A5%E0%A6%95-%E0%A6%B8%E0%A6%B2%E0%A6%9F-ugcPost-7386465648366854144-ZS7c?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%97%E0%A6%A4-%E0%A7%AF-%E0%A6%AC%E0%A6%9B%E0%A6%B0-%E0%A6%AE%E0%A6%A4%E0%A6%B0-%E0%A6%AC%E0%A6%B0%E0%A6%B9%E0%A6%AE%E0%A6%A3%E0%A6%AC%E0%A6%A1%E0%A6%AF-%E0%A6%A5%E0%A6%95-%E0%A6%B8%E0%A6%B2%E0%A6%9F-ugcPost-7386465648366854144-ZS7c?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
@@ -159,14 +152,14 @@
                   <img src="assets/img/portfolio/elec.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/elec.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%AC%E0%A6%B2%E0%A6%A6%E0%A6%B6%E0%A6%B0-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%A4-%E0%A6%9C%E0%A6%A8%E0%A6%97%E0%A6%A8-%E0%A6%AA%E0%A6%B0%E0%A6%A7%E0%A6%A8-%E0%A6%A6%E0%A6%87%E0%A6%9F-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%95-ugcPost-7360381203364909057-3htr?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%AC%E0%A6%B2%E0%A6%A6%E0%A6%B6%E0%A6%B0-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%A4-%E0%A6%9C%E0%A6%A8%E0%A6%97%E0%A6%A8-%E0%A6%AA%E0%A6%B0%E0%A6%A7%E0%A6%A8-%E0%A6%A6%E0%A6%87%E0%A6%9F-%E0%A6%B0%E0%A6%9C%E0%A6%A8%E0%A6%A4%E0%A6%95-ugcPost-7360381203364909057-3htr?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>Election Analysis</h4>
                   <p>Analytical Problem Solving</p>
                   <div class="portfolio-tags">
-                    <span>Strategic Planning</span>
+                    <span>Datawrapper</span>
                     <span>Professional Summary</span>
                   </div>
                 </div>
@@ -204,7 +197,7 @@
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Market Expansion</h4>
+                  <h4>Market Expansion</h4>Í
                   <p>Strategic Planning</p>
                   <div class="portfolio-tags">
                     <span>Strategy</span>
@@ -256,8 +249,8 @@
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
+      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
