--- a/resume.html
+++ b/resume.html
@@ -34,10 +34,6 @@
 <header id="header" class="header d-flex align-items-center light-background sticky-top">
   <div class="container d-flex align-items-center justify-content-between position-relative">
 
-    <!-- Social Icons (move left on mobile, right on desktop) -->
-    <div class="header-social-links d-flex align-items-center gap-3 order-1 order-xl-3 me-auto me-xl-0">
-      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
-    </div>
 
     <!-- Mobile Menu Button (hamburger) -->
     <i class="mobile-nav-toggle d-xl-none bi bi-list order-3 order-xl-1 ms-auto"></i>
@@ -209,10 +205,10 @@
       <div class="copyright text-center ">
         <p>© <span>Copyright</span> <strong class="px-1 sitename">Jubaer</strong> <span>All Rights Reserved<br></span></p>
       </div>
-      <div class="social-links d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/"><i class="bi bi-linkedin"></i></a>
-        <a href="https://www.behance.net/azharulislam43"><i class="bi bi-behance"></i></a>
-      </div>
+       <div class="social-links d-flex justify-content-center">
+      <a href="https://www.behance.net/azharulislam43" target="_blank"><i class="bi bi-behance"></i></a>
+      <a href="https://www.linkedin.com/in/jubaer-abdullah-07a079373/" target="_blank"><i class="bi bi-linkedin"></i></a>
+    </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
