--- a/portfolio.html
+++ b/portfolio.html
@@ -167,25 +167,32 @@
             </div>
 
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Statistical_Researc_ Mini-Projects">
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-GIS">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/portfolio-4.webp" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/1.png" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/portfolio-4.webp" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="#" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/2.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="https://www.linkedin.com/posts/jubaer-abdullah-07a079373_%E0%A6%B0%E0%A6%B8%E0%A6%A8%E0%A6%9F%E0%A6%B2-%E0%A6%9F%E0%A6%A8-%E0%A7%A9%E0%A7%A7-%E0%A6%98%E0%A6%A8%E0%A6%9F-%E0%A6%9A%E0%A6%B7%E0%A6%9F%E0%A6%B0-%E0%A6%AA%E0%A6%B0-%E0%A6%89%E0%A6%A6%E0%A6%A7%E0%A6%B0-activity-7409639985160777728-IPza?utm_source=share&utm_medium=member_desktop&rcm=ACoAAFxhZB4BHw8wBNVsV9dSJi_eM7ud89Z_Yy4" class="portfolio-details-link" target="_blank" rel="noopener noreferrer" ><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Digital Transformation</h4>
-                  <p>Technology Consulting</p>
+                  <h4>Visual Analysis</h4>
+                  <p>Analytical Problem Solving</p>
                   <div class="portfolio-tags">
-                    <span>Technology</span>
-                    <span>Innovation</span>
+                    <span>ArcGIS</span>
+                    <span>Professional Summary</span>
                   </div>
                 </div>
               </div>
             </div>
+
+
+
+
+
+            
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
               <div class="portfolio-card">
