--- a/about.html
+++ b/about.html
@@ -47,8 +47,8 @@
       <nav id="navmenu" class="navmenu">
         <div class="glass-nav">
           <ul class="d-flex gap-4 m-0 list-unstyled">
-            <li><a href="index.html" class="active">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="index.html" >Home</a></li>
+            <li><a href="about.html" class="active" >About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
@@ -60,8 +60,8 @@
     <!-- Mobile Nav (Hidden on desktop) -->
     <nav id="navmenu" class="navmenu d-xl-none order-2 w-100">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="index.html" >Home</a></li>
+        <li><a href="about.html" class="active" >About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
