--- a/contact.html
+++ b/contact.html
@@ -52,11 +52,11 @@
       <nav id="navmenu" class="navmenu">
         <div class="glass-nav">
           <ul class="d-flex gap-4 m-0 list-unstyled">
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html" class="active" >Contact</a></li>
           </ul>
         </div>
       </nav>
@@ -65,11 +65,11 @@
     <!-- Mobile Nav (Hidden on desktop) -->
     <nav id="navmenu" class="navmenu d-xl-none order-2 w-100">
       <ul>
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="index.html" >Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="resume.html">Resume</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="contact.html" class="active" > Contact</a></li>
       </ul>
     </nav>
 
