--- a/portfolio.html
+++ b/portfolio.html
@@ -54,10 +54,10 @@
       <nav id="navmenu" class="navmenu">
         <div class="glass-nav">
           <ul class="d-flex gap-4 m-0 list-unstyled">
-            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="index.html" >Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="resume.html">Resume</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="portfolio.html" class="active">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </div>
